force-app/main/default/objects/Opportunity/fields/Budget_Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approval_Stage__c</fullName>
    <label>Budget Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Consideration</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>