force-app/main/default/objects/Opportunity/fields/Budget_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Budget_Constraints__c</fullName>
    <label>Budget Constraints</label>
    <type>TextArea</type>
</CustomField>