force-app/main/default/objects/Opportunity/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <label>Subscription Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>