force-app/main/default/objects/Opportunity/fields/Total_of_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Hardware__c</fullName>
    <description>Total count of product with family hardware</description>
    <label>Total of Hardware</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>