force-app/main/default/objects/Opportunity/fields/Total_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Service__c</fullName>
    <description>Total count of product with family service</description>
    <label>Total of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>