force-app/main/default/objects/Opportunity/fields/Total_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Support__c</fullName>
    <label>Total of Support</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>Support</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>