force-app/main/default/objects/Opportunity/validationRules/Block_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Status_Change</fullName>
    <active>true</active>
    <description>Blocks status change when the parent account is on credit hold</description>
    <errorConditionFormula>Account.Credit_Hold__c &amp;&amp; ISCHANGED( StageName )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Cannot change stagename for this record because the parent account is currently on credit hold</errorMessage>
</ValidationRule>